--- a/src/projects.json
+++ b/src/projects.json
@@ -11,17 +11,45 @@
     "links": {
       "github": "https://github.com/knox-dude/social-scuba-website",
       "site": "https://social-scuba.org/"
-    }
+    },
+    "topics": [
+      {
+        "id": 1,
+        "title": "Flask",
+        "color": "green"
+      },
+      {
+        "id": 2,
+        "title": "postgres",
+        "color": "darkblue"
+      }
+    ]
   },
   {
     "id": 2,
     "title": "Jobly",
-    "images": ["photos/jobly-1.png", "photos/jobly-2.png", "photos/jobly-3.png"],
+    "images": [
+      "photos/jobly-1.png",
+      "photos/jobly-2.png",
+      "photos/jobly-3.png"
+    ],
     "description": "A web app linked to an API backend where users can search up fake companies and jobs, and then apply for these fake jobs. The data is fake but the backend is very real! I created the API using express and the frontend using Typescript and React.",
     "links": {
       "github": "https://github.com/knox-dude/jobly-react",
       "site": "https://jobly-frontend-47w2.onrender.com/"
-    }
+    },
+    "topics": [
+      {
+        "id": 1,
+        "title": "Flask",
+        "color": "green"
+      },
+      {
+        "id": 2,
+        "title": "postgres",
+        "color": "darkblue"
+      }
+    ]
   },
   {
     "id": 3,
@@ -29,14 +57,38 @@
     "images": ["photos/hacker-news-clone.PNG"],
     "description": "A clone of hacker news (https://hackernews.com) built with basic HTML/CSS/JS with all functionality of hacker news.",
     "links": {
-      "github":"https://github.com/knox-dude/hacker-news-clone-springboard"
-    }
+      "github": "https://github.com/knox-dude/hacker-news-clone-springboard"
+    },
+    "topics": [
+      {
+        "id": 1,
+        "title": "Flask",
+        "color": "green"
+      },
+      {
+        "id": 2,
+        "title": "postgres",
+        "color": "darkblue"
+      }
+    ]
   },
   {
     "id": 4,
     "title": "Jeopardy",
     "images": ["photos/jeopardy-game.PNG"],
     "description": "A small app built in basic HTML/CSS/JS that lets you play jeopardy.",
-    "links": {}
+    "links": {},
+    "topics": [
+      {
+        "id": 1,
+        "title": "Flask",
+        "color": "green"
+      },
+      {
+        "id": 2,
+        "title": "postgres",
+        "color": "darkblue"
+      }
+    ]
   }
 ]
